<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginStart="16dp"
    android:layout_marginEnd="16dp"
    tools:context=".ui.fragment.create.CreateTransporterFragment">

    <LinearLayout
        android:id="@+id/layoutContent"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/btnContiune"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="8dp"
            android:orientation="horizontal"
            android:weightSum="5">

            <com.google.android.material.textview.MaterialTextView
                style="@style/TextAppearance.MaterialComponents.Headline6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_weight="2"
                android:text="@string/transporter_points_count"
                android:textAlignment="textEnd" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/txtTransporterPointsCount"
                style="@style/TextAppearance.MaterialComponents.Headline6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/text_view_back"
                android:paddingStart="16dp"
                android:paddingTop="8dp"
                android:paddingEnd="16dp"
                android:paddingBottom="8dp"
                android:text="15" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="24dp"
            android:background="#0f0f0f" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/name_text_input"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edtxtTransporterName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/transporter_points_count"
                        android:inputType="text"
                        android:lines="1" />
                </com.google.android.material.textfield.TextInputLayout>


                <com.google.android.material.textview.MaterialTextView
                    style="@style/TextAppearance.MaterialComponents.Subtitle1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="32dp"
                    android:text="@string/transportor_durability" />

                <androidx.appcompat.widget.AppCompatSeekBar
                    android:id="@+id/seekBarTransporterDurability"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:max="15"
                    android:paddingTop="8dp"
                    android:paddingBottom="8dp"
                    android:progressTint="@color/black"
                    android:thumbTint="@color/black" />

                <com.google.android.material.textview.MaterialTextView
                    style="@style/TextAppearance.MaterialComponents.Subtitle1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="32dp"
                    android:text="@string/transporter_speed" />

                <androidx.appcompat.widget.AppCompatSeekBar
                    android:id="@+id/seekBarTransporterSpeed"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:max="15"
                    android:paddingTop="8dp"
                    android:paddingBottom="8dp"
                    android:progressTint="@color/black"
                    android:thumbTint="@color/black" />

                <com.google.android.material.textview.MaterialTextView
                    style="@style/TextAppearance.MaterialComponents.Subtitle1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="32dp"
                    android:text="@string/transporter_capacity" />

                <androidx.appcompat.widget.AppCompatSeekBar
                    android:id="@+id/seekBarTransporterCapacity"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:max="15"
                    android:paddingTop="8dp"
                    android:paddingBottom="8dp"
                    android:progressTint="@color/black"
                    android:thumbTint="@color/black" />

            </LinearLayout>

        </ScrollView>

    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnContiune"
        android:layout_width="match_parent"
        android:layout_height="72dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="32dp"
        android:text="@string/contiune"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layoutContent" />

</androidx.constraintlayout.widget.ConstraintLayout>